# tokencap

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/: TAG_PROTECTION.md
.github/workflows/: ci.yml  publish.yml  version-check.yml
docker/: docker-compose.redis.yml
scripts/: smoke_test.py
tests/: conftest.py
tests/integration/: test_anthropic.py  test_drop_in.py  test_openai.py  test_patch.py
tests/live/: test_anthropic_live.py  test_openai_live.py  test_patch_live.py  test_redis_live.py
tests/unit/: test_backends.py  test_guard.py  test_interceptor.py  test_patch.py  test_policy.py  test_providers.py  test_status.py  test_telemetry.py
tokencap/: __init__.py
tokencap/backends/: protocol.py  redis.py  sqlite.py
tokencap/core/: enums.py  exceptions.py  guard.py  policy.py  types.py
tokencap/interceptor/: anthropic.py  base.py  openai.py
tokencap/providers/: anthropic.py  openai.py  protocol.py
tokencap/status/: api.py
tokencap/telemetry/: otel.py
