[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokencap"
version = "0.1.0"
description = "Token budget enforcement for LLM client SDKs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai", "tiktoken"]
all = ["anthropic", "openai", "tiktoken"]
dev = [
    "pytest",
    "pytest-httpx",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["tokencap"]

[tool.hatch.build.targets.wheel.force-include]
"tokencap/py.typed" = "tokencap/py.typed"

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "SIM105",  # try/except/pass matches ARCHITECTURE.md spec exactly
    "SIM108",  # if/else blocks match ARCHITECTURE.md spec for readability
]

[tool.pytest.ini_options]
testpaths = ["tests"]
