[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokencap"
version = "0.2.0"
description = "Token usage visibility and budget enforcement for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pykul/tokencap"
Repository = "https://github.com/pykul/tokencap"
Issues = "https://github.com/pykul/tokencap/issues"
Changelog = "https://github.com/pykul/tokencap/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai", "tiktoken"]
redis = ["redis>=4.0"]
otel = ["opentelemetry-api>=1.0"]
all = ["anthropic", "openai", "tiktoken", "redis>=4.0", "opentelemetry-api>=1.0"]
dev = [
    "anthropic",
    "openai",
    "tiktoken",
    "redis>=4.0",
    "opentelemetry-api>=1.0",
    "build",
    "twine",
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["tokencap"]

[tool.hatch.build.targets.wheel.force-include]
"tokencap/py.typed" = "tokencap/py.typed"

[tool.mypy]
strict = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = [
    "tokencap.backends.redis",
    "tokencap.telemetry.otel",
]
disable_error_code = ["import-not-found", "attr-defined"]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "SIM105",  # try/except/pass matches ARCHITECTURE.md spec exactly
    "SIM108",  # if/else blocks match ARCHITECTURE.md spec for readability
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
